[gd_scene load_steps=15 format=2]

[ext_resource path="res://lobby/lobby.gd" type="Script" id=1]
[ext_resource path="res://assets/spinner.svg" type="Texture" id=2]
[ext_resource path="res://themes/FlatUI/kenneyUI-blue.tres" type="Theme" id=3]
[ext_resource path="res://lobby/Lobbymap.tscn" type="PackedScene" id=4]
[ext_resource path="res://lobby/scenes/car_selector/car_selector.tscn" type="PackedScene" id=5]
[ext_resource path="res://lobby/scenes/main/main.tscn" type="PackedScene" id=6]
[ext_resource path="res://lobby/scenes/waiting_room/waiting_room.tscn" type="PackedScene" id=7]
[ext_resource path="res://lobby/scenes/credits/credits.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/audio/racing-game-theme.WAV" type="AudioStream" id=11]
[ext_resource path="res://assets/audio/racing-game-theme-2.WAV" type="AudioStream" id=13]

[sub_resource type="World" id=40]

[sub_resource type="Animation" id=4]
resource_name = "spin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[sub_resource type="DynamicFontData" id=5]
antialiased = false
font_path = "res://themes/FlatUI/kenvector_future.ttf"

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = SubResource( 5 )

[node name="Lobby" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -0.00012207
rect_clip_content = true
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="music1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "lobby"

[node name="music2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "lobby"

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1023, 600 )
own_world = true
world = SubResource( 40 )
handle_input_locally = false
msaa = 2
render_target_clear_mode = 2
render_target_update_mode = 3

[node name="Lobbymap" parent="ViewportContainer/Viewport" instance=ExtResource( 4 )]

[node name="Loading_screen" type="ColorRect" parent="."]
pause_mode = 2
process_priority = 1
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spinner" type="TextureRect" parent="Loading_screen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.9999
margin_top = -50.0
margin_right = 50.0001
margin_bottom = 50.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinAni" type="AnimationPlayer" parent="Loading_screen/Spinner"]
anims/spin = SubResource( 4 )

[node name="process" type="Label" parent="Loading_screen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.9999
margin_top = -25.0
margin_right = 25.0001
margin_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 26, 25 )
custom_fonts/font = SubResource( 6 )
text = "99%"
align = 1
valign = 1

[node name="main" parent="." instance=ExtResource( 6 )]

[node name="waiting_room" parent="." instance=ExtResource( 7 )]
visible = false

[node name="car_selector" parent="." instance=ExtResource( 5 )]
visible = false

[node name="credits" parent="." instance=ExtResource( 8 )]
visible = false
